# scopeforge

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: scope.example.json
src/scopeforge/: __init__.py  cli.py  http_probe.py  inventory.py  ledger.py  report.py  scanner.py  scope.py  tls_probe.py
tests/: test_http_probe.py  test_inventory.py  test_ledger.py  test_scanner.py  test_scope.py  test_tls_probe.py
